# Finance

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/api/v1/: deps.py  router.py
apps/api/app/api/v1/endpoints/: __init__.py  alerts.py  auth.py  compare.py  learning.py  news.py  portfolio.py  screener.py  stocks.py  watchlist.py
apps/api/app/core/: cache.py  config.py  database.py  rate_limit.py  security.py
apps/api/app/models/: __init__.py  alert.py  portfolio.py  user.py  watchlist.py
apps/api/app/schemas/: alert.py  auth.py  learning.py  news.py  portfolio.py  stock.py  watchlist.py
apps/api/app/services/: ai_service.py  alert_service.py  news_service.py  portfolio_service.py  screener_service.py  smart_insights_service.py  stock_service.py  universe_service.py
apps/api/app/services/providers/: alpha_vantage_provider.py  base.py  fmp_provider.py  yahoo_provider.py
apps/api/app/utils/: finance_terms.py
apps/web/: next.config.mjs  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: alerts-client.tsx  app-shell.tsx  compare-client.tsx  financial-statements-panel.tsx  header.tsx  learning-client.tsx  login-client.tsx  metric-chip.tsx  news-page-client.tsx  portfolio-client.tsx  price-chart.tsx  providers.tsx  ratio-dashboard-panel.tsx  screener-client.tsx  (+6 more)
docs/: API_DESIGN.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  PROJECT_STRUCTURE.md  SCALABILITY.md  SECURITY.md
infra/db/: schema.sql
(+10 files in other folders)
