[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumina-api"
version = "1.0.0"
description = "Lumina stock insights backend"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.31",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt<4.0.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "redis>=5.0.7",
  "yfinance>=0.2.54",
  "openai>=1.40.0",
  "google-auth>=2.33.0",
  "email-validator>=2.2.0",
  "eval-type-backport>=0.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.6.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
